--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div id="name-social-container">
             <div class="text-center">
                 <h1 id="my-name">
+			Welcome in my portfolio<br>
                     Mateshwari Verma
                 </h1>
 
@@ -103,7 +104,7 @@
                  <img src="image/mpv_pic.png">
             </div>
 			<div id="p1">
-            <p> An Computer Science Student, Tech Enthusiast, learner and on the path to be a Full Stack Developer/Python Developer. I have a good command over Data structures and Algorithms along with fluency in Object Oriented Programming concepts. Currently I am trying to explore new paths and looking for an organization where i can make the best use of my skills for that organization and also grow in my field of work. I am a quick study and can pick up any technology.
+            <p> i'm Computer Science Student, Tech Enthusiast, learner and on the path to be a Full Stack Developer/Python Developer. I have a good command over Data structures and Algorithms along with fluency in Object Oriented Programming concepts. Currently I am trying to explore new paths and looking for an organization where i can make the best use of my skills for that organization and also grow in my field of work. I am a quick study and can pick up any technology.
 Objective : I'll work hard until i change my habit to end a sentence with semi-colon instead of a full stop </p>
         </div>
         </section>
@@ -249,7 +250,7 @@ Objective : I'll work hard until i change my habit to end a sentence with semi-c
                         <div class="timeline-logo">
                             <img src="image/nt.jpg">
                         </div>
-                        <h3 class="experience-designation  m0 m-blue"> Python developer Intern </h3>
+                        <h3 class="experience-designation  m0 m-blue"> Python Intern </h3>
                         <h4 class="experience-company-name"> Neuraltechsoft,Mumbai </h4>
                         <h5 class="experience-duration m0"> jan 2020- march 2020 </h5>
                         <p class="experience-description text-align-justify">
